- Implementing Pop3 server handler - Update files to handle implementation of the pop3 server - Update SMTP server to manage the tread pool